✨ recommendations shown as YT iframes

--- a/popup/index.html
+++ b/popup/index.html
@@ -15,21 +15,18 @@
   <main>
     <section>
         <button id="testButton3">TEST3 (the first atm, all previous were removed)</button>
-        <div>
-            <pre id="testPre3"></pre>
-        </div>
+        <pre id="testPre3"></pre>
+        <br>
         <button id="testButton4">TEST4 (the same as 3 but is ready for sending via REST API (follows its format))</button>
-        <div>
-            <pre id="testPre4"></pre>
-        </div>
+        <pre id="testPre4"></pre>
+        <br>
         <button id="testButton5">TEST5 (the same as 4 but POSTs the data via the REST API)</button>
-        <div>
-            <p id="testP5"></p>
-        </div>
+        <p id="testP5"></p>
+        <br>
         <button id="testButton6">TEST6 (get the recommendations!)</button>
-        <div>
-            <pre id="testPre6"></pre>
-        </div>
+        <pre id="testPre6"></pre>
+        <br>
+        <button id="testButton7">TEST7 (get clickable recommendations)</button>
     </section>
   </main>
 
