♻️🚸🥅 overhaul and polish

--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -12,15 +12,31 @@
 </head>
 
 <body>
+  <!-- <header>
+    <h1>REEE — REcommendation Engine Extension</h1>
+  </header> -->
   <main>
-    <section id="section">
+    <section>
+      <header>
+        <h2>Youtube video recommendations</h2>
+      </header>
+
+      <button id="refresh" disabled autocomplete="off">Refresh</button>
+
+      <p id="loading">Loading...</p>
+      <p id="noUser" hidden>There are no recommendations yet. Please click the <strong>refresh</strong> button.</p>
+      <p id="emptyHistory" hidden>It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
+      <p id="otherError" hidden>Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
+
+      <ul id="section"></ul>
     </section>
   </main>
 
-  <!-- <footer>
+  <footer>
     <hr>
-    <button id="legacyButton">Open legacy UI</button>
-  </footer> -->
+    <!-- <button id="legacyButton">Open legacy UI</button> -->
+    <p>REEE — REcommendation Engine Extension</p>
+  </footer>
 
   <script src="../common/browser-polyfill.min.js"></script>
   <script src="index.js" type="module"></script>
