--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -22,13 +22,15 @@
       </header>
 
       <button id="refresh" disabled autocomplete="off">Refresh</button>
-
+      <br>
       <p id="loading">Loading...</p>
       <p id="noUser" hidden>There are no recommendations yet. Please click the <strong>refresh</strong> button.</p>
       <p id="emptyHistory" hidden>It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
       <p id="otherError" hidden>Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
-
-      <ul id="section"></ul>
+      <!-- <br> -->
+      <!-- <ul id="container"></ul> -->
+    </section>
+    <section id="container">
     </section>
   </main>
 
