♻️ using constructor instead of createElement
when creating Image (<img>).

The same is not used for <a> because it doesn't have such constructor.

Fixes #4.

--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -30,7 +30,7 @@
 
     <footer>
       <hr>
-      <a href="https://github.com/dogfuntom/REEE">REEE — REcommendation Engine Extension</a>
+      <a href="https://www.reee.uk">REEE — REcommendation Engine Extension</a>
       <br>
       <a href="./license-3rd-party.html">3rd-party licenses</a>
     </footer>
