✨ privacy consent dialog
fixes #2

--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -20,7 +20,7 @@
         <button id="refresh" disabled autocomplete="off">Refresh</button>
         <br>
         <p id="loading">Loading...</p>
-        <p id="noUser" hidden>There are no recommendations yet. Please click the <strong>refresh</strong> button.</p>
+        <p id="noUser" hidden>There are no recommendations yet. Please click the <strong>refresh</strong> button to get them.</p>
         <p id="emptyHistory" hidden>It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
         <p id="otherError" hidden>Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
       </section>
@@ -33,6 +33,8 @@
       <a href="https://www.reee.uk">REEE — REcommendation Engine Extension</a>
       <br>
       <a href="./license-3rd-party.html">3rd-party licenses</a>
+      <br>
+      <a href="../common/privacyPolicyPage/index.html">Privacy Policy</a>
     </footer>
 
     <script src="index.js" type="module"></script>
