🚚 some folder/file reorganization

--- a/privacyConsent/UI/denied.html
+++ b/privacyConsent/UI/denied.html
@@ -6,8 +6,8 @@
 
     <title>No Consent — REEE</title>
 
-    <link rel="stylesheet" href="../common/mvp.css">
-    <link rel="icon" href="../common/icon.png" type="image/png">
+    <link rel="stylesheet" href="/common/mvp.css">
+    <link rel="icon" href="/common/icon.png" type="image/png">
   </head>
 
   <body>
