--- a/privacyConsent/UI/index.html
+++ b/privacyConsent/UI/index.html
@@ -24,7 +24,7 @@
               which we collect to recommend Youtube videos that you may find interesting.</li>
           </ul>
           <p>If you choose not to allow us to collection anonymous data, we won't be able to provide you Youtube video recommendations. Thus, the extension will remove itself.</p>
-          <p>Full details about the anonymous data we collect and what we do with it are provided in <a href="../common/privacyPolicyPage/index.html">our Privacy Policy.</a></p>
+          <p>Full details about the anonymous data we collect and what we do with it are provided in <a href="/privacyPolicyPage/index.html">our Privacy Policy.</a></p>
 
           <p>
             <button id="yes">Yes, you can collect anonymous data in accord with your Privacy Policy</button>
