--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -34,7 +34,7 @@
       <br>
       <a href="./license-3rd-party.html">3rd-party licenses</a>
       <br>
-      <a href="../common/privacyPolicyPage/index.html">Privacy Policy</a>
+      <a href="/privacyPolicyPage/index.html">Privacy Policy</a>
     </footer>
 
     <script src="index.js" type="module"></script>
