--- a/privacyConsent/UI/denied.html
+++ b/privacyConsent/UI/denied.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="/common/mvp.css">
     <link rel="icon" href="/common/icon.png" type="image/png">
+
+    <script type="application/javascript" src="../../browser-polyfill.js"></script>
   </head>
 
   <body>
