✨ MetaMask login prototype

--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -17,6 +17,7 @@
           <h2>Youtube video recommendations</h2>
         </header>
 
+        <button id="test">MetaMask login prototype</button>
         <button id="refresh" disabled autocomplete="off">Refresh</button>
         <br>
         <p id="loading">Loading...</p>
@@ -38,5 +39,6 @@
     </footer>
 
     <script src="index.js" type="module"></script>
+    <script type="module" src="/_build/metamask.bundle.js"></script>
   </body>
 </html>
