--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -11,13 +11,22 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <a href="/recommendationsPage/index.html">home</a>
+        <ul>
+          <li>Video Recommendations</li>
+          <li><a href="/metaMaskPage/index.html">MetaMask Options</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section>
         <header>
           <h2>Youtube video recommendations</h2>
         </header>
 
-        <button id="test">MetaMask login prototype</button>
+        <button id="test" hidden>MetaMask login prototype</button>
         <button id="refresh" disabled autocomplete="off">Refresh</button>
         <br>
         <p id="loading">Loading...</p>
