--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -21,12 +21,51 @@
       </nav>
     </header>
     <main>
+      <article>
+        <h2>Login</h2>
+        <p>Login (or register) using MetaMask. No email needed. No password needed.</p>
+        <button id="kovan">Login through Kovan Test Network</button>
+        <br>
+        <p>Why log in?</p>
+        <ul>
+          <li>(Not implemented yet) To share the same account between multiple devices.</li>
+          <li>(Not implemented yet) To earn REEE coins (fungible tokens).</li>
+        </ul>
+      </article>
+      <hr>
       <section>
         <header>
-          <h2>MetaMask interaction</h2>
+          <h2>REEE token management</h2>
         </header>
 
-        <button id="kovan">Login through Kovan Test Network</button>
+
+        <aside>
+          <h3>Step 1: Add Binance Chain to MetaMask</h3>
+          <p>Reason: REEE coins exist inside Binance Network, thus you can spend or exchange (or manage in any other way) them only through this particular network.</p>
+          <button id="binanceTest">Add Binance Test Network to MetaMask</button>
+          <button id="binance">Add Binance Network to MetaMask</button>
+          <p>Learn more about Binance:</p>
+          <ul>
+            <li><a href="https://www.binance.org/en/smartChain">Binance Smart Chain.</a></li>
+            <li><a href="https://www.binance.com/en">Binance.</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Binance#Cryptocurrencies">Wikipedia.</a></li>
+          </ul>
+        </aside>
+        <aside>
+          <h3>Step 2: Track REEE coins</h3>
+          <p>Why?</p>
+          <ul>
+            <li>To see how many you own.</li>
+            <li>To manage them.</li>
+          </ul>
+          <button id="token">Track REEE coins in MetaMask</button>
+          <p>Learn more about REEE coins:</p>
+          <ul>
+            <li>REEE coins are <a href="https://en.wikipedia.org/wiki/Cryptocurrency#Crypto_token">fungible tokens</a> existing in Binance Smart Chain.</li>
+            <li><a href="https://bscscan.com/token/0xb802e1d6bd40c1976d11d0cd462c04122ba33672">BscScan.</a></li>
+          </ul>
+        </aside>
+
       </section>
     </main>
 
