✨ login through real backend

--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -21,27 +21,14 @@
       </nav>
     </header>
     <main>
-      <article>
-        <h2>Login</h2>
-        <p>Login (or register) using MetaMask. No email needed. No password needed.</p>
-        <button id="kovan">Login through Kovan Test Network</button>
-        <br>
-        <p>Why log in?</p>
-        <ul>
-          <li>(Not implemented yet) To share the same account between multiple devices.</li>
-          <li>(Not implemented yet) To earn REEE coins (fungible tokens).</li>
-        </ul>
-      </article>
-      <hr>
       <section>
         <header>
           <h2>REEE token management</h2>
         </header>
 
-
         <aside>
           <h3>Step 1: Add Binance Chain to MetaMask</h3>
-          <p>Reason: REEE coins exist inside Binance Network, thus you can spend or exchange (or manage in any other way) them only through this particular network.</p>
+          <p>Why? REEE coins exist inside Binance Network, thus you can spend or exchange (or manage in any other way) them only through this particular network.</p>
           <button id="binanceTest">Add Binance Test Network to MetaMask</button>
           <button id="binance">Add Binance Network to MetaMask</button>
           <p>Learn more about Binance:</p>
@@ -64,6 +51,12 @@
             <li>REEE coins are <a href="https://en.wikipedia.org/wiki/Cryptocurrency#Crypto_token">fungible tokens</a> existing in Binance Smart Chain.</li>
             <li><a href="https://bscscan.com/token/0xb802e1d6bd40c1976d11d0cd462c04122ba33672">BscScan.</a></li>
           </ul>
+        </aside>
+        <aside>
+          <h3>Step 3: Sign in to Binance Chain through MetaMask</h3>
+          <p>Why? To receive REEE coins as reward for teaching our recommendation system.</p>
+          <button id="binanceTestSign">Sign in to Binance Testnet</button>
+          <p>Is it safe? We learn only your Public Address. Basically, it's like learning your credit card number so we can send you coins. Such public information is not enough for us to do anything malicious.</p>
         </aside>
 
       </section>
