🏗 switch from deno to node.js
because metamask-extension-provider is acting up in deno
(because it's rotten (obsolete) already)

--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -67,6 +67,6 @@
       <a href="https://www.reee.uk">REEE — REcommendation Engine Extension</a>
     </footer>
 
-    <script type="module" src="/_build/metamask.bundle.js"></script>
+    <script type="module" src="/_build/bundle.js"></script>
   </body>
 </html>
