--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -42,7 +42,7 @@
           <p>Why?</p>
           <ul>
             <li>To see how many you own.</li>
-            <li>To manage them.</li>
+            <li>To manage them (using MetaMask).</li>
           </ul>
           <button id="token">Track REEE coins in MetaMask</button>
           <p>Learn more about REEE coins:</p>
@@ -54,8 +54,8 @@
         <aside>
           <h3>Step 3: Sign in to Binance Chain through MetaMask</h3>
           <p>Why? To receive REEE coins as reward for teaching our recommendation system.</p>
-          <button id="binanceTestSign">Sign in to Binance Testnet</button>
-          <p>Is it safe? We learn only your Public Address. Basically, it's like learning your credit card number so we can send you coins. Such public information is not enough for us to do anything malicious.</p>
+          <button id="binanceSign" style="overflow-wrap: anywhere">Sign in to Binance Mainnet</button>
+          <p>Is it safe? We learn only your Public Address. Basically, it's like learning your credit card number so we can send you coins. Such public information is intended to be disclosed freely, it's not enough to do anything malicious.</p>
         </aside>
 
       </section>
