--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -30,7 +30,7 @@
         <button id="refresh" disabled autocomplete="off">Refresh</button>
         <br>
         <p id="loading">Loading...</p>
-        <p id="noUser" hidden>There are no recommendations yet. Please click the <strong>refresh</strong> button to get them.</p>
+        <p id="noUser" hidden>NOTE: These videos are just an example. Please click the <strong>refresh button</strong> to receive actual recommendations for you.</p>
         <p id="emptyHistory" hidden>It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
         <p id="otherError" hidden>Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
       </section>
@@ -47,6 +47,6 @@
       <a href="/privacyPolicyPage/index.html">Privacy Policy</a>
     </footer>
 
-    <script src="index.js" type="module"></script>
+    <script src="recommendationsPage.mjs" type="module"></script>
   </body>
 </html>
