--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -6,39 +6,59 @@
 
     <title>Recommendations — REEE</title>
 
-    <link rel="stylesheet" href="../common/mvp.css">
+    <link rel="stylesheet" href="./style/pico.css">
+    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/video-cards.css">
+
     <link rel="icon" href="../common/icon.png" type="image/png">
   </head>
 
   <body>
-    <header>
+    <header data-theme="light">
       <nav>
-        <a href="/recommendationsPage/index.html">home</a>
         <ul>
-          <li>Video Recommendations</li>
-          <li><a href="/metaMaskPage/index.html">MetaMask Options</a></li>
+          <li class="brand" href="#">
+            <img class="logo initial-height" src="../common/reee_logo.png" />
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a href="/metaMaskPage/index.html" role="button" class="secondary outline">
+              <img src="../common/reee_mm.png" height="107" />
+              <br>
+              <span>MetaMask</span>
+            </a>
+          </li>
+          <li>
+            <button href="#" id="refresh" class="contrast outline">
+              <img src="../common/reee_refresh.png" height="107" />
+              <br>
+              <span>Refresh</span>
+            </button>
+          </li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container-fluid">
       <section>
-        <header>
+        <header hidden aria-hidden="false">
           <h2>Youtube video recommendations</h2>
         </header>
 
-        <button id="test" hidden>MetaMask login prototype</button>
-        <button id="refresh" disabled autocomplete="off">Refresh</button>
-        <br>
-        <p id="loading">Loading...</p>
-        <p id="noUser" hidden>NOTE: These videos are just an example. Please click the <strong>refresh button</strong> to receive actual recommendations for you.</p>
-        <p id="emptyHistory" hidden>It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
-        <p id="otherError" hidden>Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
+        <!-- @todo consider using pico's modal here -->
+        <p id="loading" aria-busy="true">Loading...</p>
+        <p id="loadingLong" hidden aria-busy="true">Loading... This will take approximately 30 seconds... ⏳</p>
+        <p id="noUser" hidden>⚠ These videos are just an example. Please click the <strong>refresh button</strong> to receive actual recommendations for you.</p>
+        <p id="emptyHistory" hidden>⚠ It seems like you have no Youtube videos in browser history. Please visit some of your favorite Youtube videos before using REEE.</p>
+        <p id="otherError" hidden>🚨 Can't connect to REEE server: <samp id="otherErrorContent"></samp>.</p>
       </section>
       <section id="container">
       </section>
     </main>
 
-    <footer>
+    <footer class="container-fluid">
       <hr>
       <a href="https://www.reee.uk">REEE — REcommendation Engine Extension</a>
       <br>
@@ -47,6 +67,6 @@
       <a href="/privacyPolicyPage/index.html">Privacy Policy</a>
     </footer>
 
-    <script src="recommendationsPage.mjs" type="module"></script>
+    <script src="./recommendationsPage.mjs" type="module"></script>
   </body>
 </html>
