--- a/recommendationsPage/license-3rd-party.html
+++ b/recommendationsPage/license-3rd-party.html
@@ -16,6 +16,7 @@
         applies to:
         - MVP.css, Copyright (c) 2020 Andy Brewer
         - MetaMask Providers, Copyright (c) 2021 MetaMask
+        - Pico.css, Copyright 2019-2021
 -----------------------------------------------------------------------------
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
