🚑 fixed not running
(due to lack of webextension polyfill)

--- a/privacyConsent/UI/denied.html
+++ b/privacyConsent/UI/denied.html
@@ -25,6 +25,7 @@
       </section>
     </main>
 
+    <script type="module" src="../../common/browser-polyfill.js"></script>
     <script src="denied.js" type="module"></script>
   </body>
 </html>
