--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -66,6 +66,7 @@
       <a href="https://www.reee.uk">REEE — REcommendation Engine Extension</a>
     </footer>
 
-    <script type="module" src="/_node/bundle.js"></script>
+    <script type="module" src="../common/browser-polyfill.js"></script>
+    <script type="module" src="/MetaMask/bundle.js"></script>
   </body>
 </html>
