--- a/privacyConsent/UI/index.html
+++ b/privacyConsent/UI/index.html
@@ -34,6 +34,7 @@
       </section>
     </main>
 
+    <script type="module" src="../../common/browser-polyfill.js"></script>
     <script src="index.js" type="module"></script>
   </body>
 </html>
