--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -67,6 +67,7 @@
       <a href="/privacyPolicyPage/index.html">Privacy Policy</a>
     </footer>
 
+    <script type="module" src="../common/browser-polyfill.js"></script>
     <script src="./recommendationsPage.mjs" type="module"></script>
   </body>
 </html>
