🚧 add chain works through custom provider

--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -67,6 +67,8 @@
     </footer>
 
     <script type="module" src="../common/browser-polyfill.js"></script>
-    <script type="module" src="/MetaMask/bundle.js"></script>
+    <!-- <script type="module" src="/MetaMask/bundle.js"></script> -->
+    <script type="module" src="./provider.mjs"></script>
+    <script type="module" src="./experiment.mjs"></script>
   </body>
 </html>
