--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -69,6 +69,6 @@
     <script type="module" src="../common/browser-polyfill.js"></script>
     <!-- <script type="module" src="/MetaMask/bundle.js"></script> -->
     <script type="module" src="./provider.mjs"></script>
-    <script type="module" src="./experiment.mjs"></script>
+    <script type="module" src="./index.mjs"></script>
   </body>
 </html>
