🍱 swapped old logo for new logo

--- a/recommendationsPage/license-3rd-party.html
+++ b/recommendationsPage/license-3rd-party.html
@@ -7,7 +7,7 @@
     <title>3rd-party licenses — REEE</title>
 
     <link rel="stylesheet" href="../common/mvp.css">
-    <link rel="icon" href="../common/icon.png" type="image/png">
+    <link rel="icon" href="../common/reee_logo.png" type="image/png">
   </head>
   <body>
     <pre>
