--- a/metaMaskPage/index.html
+++ b/metaMaskPage/index.html
@@ -7,7 +7,7 @@
     <title>MetaMask — REEE</title>
 
     <link rel="stylesheet" href="../common/mvp.css">
-    <link rel="icon" href="../common/icon.png" type="image/png">
+    <link rel="icon" href="../common/reee_logo.png" type="image/png">
   </head>
 
   <body>
