--- a/recommendationsPage/index.html
+++ b/recommendationsPage/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/video-cards.css">
 
-    <link rel="icon" href="../common/icon.png" type="image/png">
+    <link rel="icon" href="../common/reee_logo.png" type="image/png">
   </head>
 
   <body>
